# libselect_cb

./: CMakeLists.txt  LICENSE  README.md  select_cb.c
include/: select_cb.h
tests/: test.c
